usb_disk: returns B_DEV_NOT_READY for SCSI_SENSE_KEY_NOT_READY

...instead of B_DEV_NO_MEDIA. The latter seems to imply we stop testing
the unit is ready in usb_disk_device_added().
Based on a patch provided by markh in #9589.